fix text overflow on doc pages

--- a/src/css/site.css
+++ b/src/css/site.css
@@ -389,6 +389,7 @@
   border-radius: 5px;
   border: solid 1px black;
   padding: 10px;
+  word-wrap:break-word;
 }
 
 @media (max-width: 600px) {
